# CG-cw

./: CMakeLists.txt  README.md  demo.json  demo.ppm
cameras/: Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
core/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
lights/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h
main/: main.cpp
materials/: BlinnPhong.cpp  BlinnPhong.h
shapes/: BVH.cpp  BVH.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  TriMesh.cpp  TriMesh.h  Triangle.cpp  Triangle.h
